<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/inputFirstNumber"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext" />

    <EditText
        android:id="@+id/inputField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/inputSecondNumber"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/sum" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            android:text="@string/dif" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:textSize="30sp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:text="@string/multi" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            android:text="@string/div" />
    </LinearLayout>

    <Button
        android:id="@+id/sendResultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendText"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="16dp" />
</LinearLayout>
